# Snippy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/: README.md  build_linux.sh  build_macos.sh  build_windows.bat  inno_setup.iss  pyinstaller.spec  snippy.desktop
packaging/macos/: entitlements.plist
snippy/: __init__.py  __main__.py  app.py  py.typed
snippy/assets/: README.md  generate_ico.py
snippy/core/: __init__.py  autostart.py  bundle.py  capture_screen.py  clipboard.py  config.py  db.py  detector.py  global_hotkey.py  logging.py  scheduler.py  search.py
snippy/ui/: __init__.py  backup.py  detail.py  feedback.py  history.py  settings.py  styles.py
tests/: conftest.py  test_autostart.py  test_backup.py  test_bundle.py  test_capture_screen.py  test_core.py  test_detail.py  test_history.py  test_lifecycle.py  test_scheduler.py  test_search_v2.py  test_settings.py  test_smoke.py  test_styles.py  test_tags.py
