[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snippy"
version = "0.3.0"
description = "Smart clipboard & snippet manager that lives in your system tray."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Snippy Contributors" },
]
keywords = ["clipboard", "snippets", "productivity", "qt", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.6,<7",
    "rapidfuzz>=3.6,<4",
    "cryptography>=42,<46",
    "platformdirs>=4.2,<5",
    "pynput>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "black>=24",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # NOTE: `types-platformdirs` is intentionally NOT included here.
    # It's a real PyPI package, but the typeshed stub is occasionally
    # published with a Python-version pin that doesn't match the runner
    # (e.g. the 3.12 wheels disappear temporarily during a typeshed
    # re-publish). When that happens, the entire `pip install ".[dev]"`
    # fails with "No matching distribution found" and the workflow
    # breaks. mypy is fine without it: it falls back to `Any` for
    # platformdirs.platformdirs() return types, which we don't
    # actually rely on being specific (we just call user_data_dir()).
]

[project.scripts]
snippy = "snippy.app:run"

[project.urls]
Homepage = "https://github.com/tbertha35/snippy"
Issues = "https://github.com/tbertha35/snippy/issues"

[tool.setuptools]
# Conventional flat layout: pyproject.toml at the repo root, `snippy/`
# is the importable Python package. (If you ever need to nest this
# inside a different root, swap the `packages = [...]` line below for
# the commented-out [tool.setuptools.packages.find] block at the
# bottom of this file.)
packages = ["snippy", "snippy.core", "snippy.ui"]
include-package-data = true

[tool.setuptools.package-data]
snippy = ["assets/*", "assets/**/*", "py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
